Added JVM options for running on Java 17
We will have a Jenkins job soon for verifying the tests on Java 17.